# DWITP

./: .env.example  .gitignore  AI-001_AI_Governance_and_Safety.md  ARCH-001_System_Architecture.md  DEV-001_Development_Standard.md  DWITP_Project_Report.docx  Dwitp_vibe_security_spec.md  INTEL-001_Intelligence_Requirements.md  INTEL-002_Telegram_Group_Intelligence.md  IR-001_Incident_Response_Playbook.md  README.md  TELEGRAM.md  THREAT_LEXICON.md  features.md  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: security-gate.yml
baseline/: architecture_inventory.md  compliance_audit.md  compliance_report.md  dependency_inventory.md  phase1-exit-checklist.md  project-tracker.md  pytest-output.txt  pytest-results.xml
config/: sources.yaml
config/seccomp/: README.md  crawler.json
infra/: docker-compose.yml
infra/terraform/: crawler.tf
infra/tls/: entrypoint-tls.sh  gen-ca.sh  gen-cert.sh
scripts/: build.ps1  e2e_test.sh  healthcheck.sh  init-db.sql  pin-hashes.sh  rotate-secrets.ps1  rotate-secrets.sh  setup.ps1  setup.sh
src/ai_layer/: README.md  classifier.py  main.py
src/analysis/: README.md  main.py
src/common/: __init__.py  models.py  notifier.py  queue.py  security.py
src/crawler/: README.md  main.py
src/dashboard/: README.md  main.py
src/db_writer/: README.md  main.py
src/graph_analytics/: README.md  main.py
src/sanitizer/: README.md  main.py
src/telegram_collector/: README.md  main.py
tests/: conftest.py  test_crawler.py  test_models.py  test_notifier.py  test_queue.py  test_sanitizer.py  test_security.py
(+21 files in other folders)
